--- a/index.html
+++ b/index.html
@@ -26,33 +26,44 @@
             You know you want to.
         </div>
         <!-- Form -->
-        <div class="formContainer">
             <form action="#" method="get">
-                <div>
-                    <label for="first_name">First Name:</label>
-                    <input type="text" name="first_name" id="first_name">
-
-                    <label for="last_name">Last Name:</label>
-                    <input type="text" name="last_name" id="last_name">
+                <div class="formContainer">
+                    <h1>Let's do this</h1>
+                    <div class="formRow">
+                        <div class="formCol">
+                            <label for="first_name">First Name:</label>
+                            <input type="text" name="first_name" id="first_name">
+                        </div>
+                        <div class="formCol">
+                            <label for="last_name">Last Name:</label>
+                            <input type="text" name="last_name" id="last_name">
+                        </div>
+                    </div>
+                    <div class="formRow">
+                        <div class="formCol">
+                            <label for="user_email">Email:</label>
+                            <input type="email" id="user_email" name="user_email">
+                        </div>
+                        <div class="formCol">
+                            <label for="phone_number">Phone Number:</label>
+                            <input type="tel" id="phone_number" name="phone_number">
+                            </div>
+                    </div>
+                    <div class="formRow">
+                        <div class="formCol">
+                            <label for="user_password">Password:</label>
+                            <input type="password" id="user_password" name="user_password" required>
+                        </div>
+                        <div class="formCol">
+                            <label for="confirm_password">Confirm Password:</label>
+                            <input type="password" id="confirm_password" name="confirm_password" required>
+                        </div>
+                    </div>
                 </div>
-                <div>
-                    <label for="user_email">Email:</label>
-                    <input type="email" id="user_email" name="user_email" required>
-
-                    <label for="phone_number">Phone Number:</label>
-                    <input type="tel" id="phone_number" name="phone_number" required>
+                <div class="createAccContainer">
+                    <button type="submit" id="createAcc">Create Account</button>
                 </div>
-                <div>
-                    <label for="user_password">Password:</label>
-                    <input type="password" id="user_password" name="user_password" required>
-
-                    <label for="confirm_password">Confirm Password:</label>
-                    <input type="password" id="confirm_password" name="confirm_password" required>
-                </div>
-
-                <button type="submit">Create Account</button>
             </form>
-        </div>
         <div id="prevUser">
             Already have an account?
             <button id="logIn">Log in</button>
